<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:id="@+id/holder_image_title_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_urlToImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/article_defaultTitle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/article_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/articleDescriptionColor"
            android:text="@string/article_defaultDescription"
            android:textSize="16sp"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/article_originalNewsUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/article_defaultUrlLink"
            android:textSize="16sp"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            tools:ignore="HardcodedText"
            android:focusable="true" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>